--- a/test3/test3.css
+++ b/test3/test3.css
@@ -2,42 +2,156 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  overflow-x: hidden;
-  font-family: Arial;
-  background-color: #888;
+  overflow-x: scroll;
+  font-family: "Helvetica", sans-serif;
+  font-size: 12px;
+  color: #707070;
+  background-color: #eeeeee;
 }
 
 body .pagination {
-  max-width: 400px;
-  min-width: 300px;
+  max-width: 800px;
+  min-width: 400px;
   width: 100%;
+  overflow: scroll;
   display: block;
-  margin: 0 auto;
-  position: relative;
-  background-color: lightgreen;
+  margin: 100px auto;
+  background-color: #ffffff;
   padding: 20px;
+}
+
+body .pagination .information {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 14px 8px 0;
+}
+
+body .pagination .information .search-form {
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body .pagination .information .search-box {
+  margin-right: 5px;
+  height: 18px;
+  width: 162px;
+  border: 1px solid #adc1c7;
+  border-radius: 2px;
+  font-size: 10px;
+  color: #c1c0c0;
+}
+
+body .pagination .information ::placeholder {
+  color: #eaeaea;
+  padding-left: 5px;
+  justify-content: center;
+}
+
+body .pagination .information .search-btn {
+  margin-right: 2px;
+  height: 22px;
+  width: 22px;
+  border: 1px solid #adc1c7;
+  border-radius: 3px;
+  background-color: #adc1c7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body .pagination .information .search-btn img {
+  width: 12px;
+  height: 12px;
+  display: block;
+}
+
+body .pagination .information .dl-btn img {
+  width: 13px;
+  height: 13px;
+  position: relative;
+  top: 8px;
 }
 
 body .pagination .tableList {
   min-height: 250px;
-  text-indent: 20px;
+  border-collapse: collapse;
+  border: 1px solid #adc1c7;
+  border-radius: 2px;
+  display: inline-block;
 }
 
-body .tableList .objectBlock {
-  position: relative;
-  background-color: black;
-  color: white;
-  padding: 10px;
-  margin-bottom: 10px;
+body .pagination .tableList thead {
+  background-color: #efeeed;
+  color: #adc1c7;
+}
+
+body .pagination .tableList tr {
+  height: 38px;
+}
+
+body .pagination .tableList th {
+  font-weight: 400;
+  padding-right: 10px;
+  padding-left: 10px;
+  text-align: left;
+}
+
+body .pagination .tableList .icon {
+  cursor: pointer;
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 13px;
+  background-repeat: no-repeat;
+  background-position: center 5px;
+  background-size: 8px 8px;
+}
+
+body .pagination .tableList .filtericon {
+  background-image: url(./assets/grey-filter2.svg);
+  margin-left: 3px;
+}
+
+body .pagination .tableList .sorticon {
+  background-image: url(./assets/grey-sort2.svg);
+}
+
+body .pagination .tableList .sorticon-des {
+  background-image: url(./assets/grey-sort2-des.svg);
+}
+
+body .pagination .tableList .sorticon-asc {
+  background-image: url(./assets/grey-sort2-asc.svg);
+}
+
+body .pagination .tableList tbody
+tr {
+  border-bottom: 0.5px solid #eeeeee;
+}
+
+body .pagination .tableList :last-child {
+  border-bottom: none;
+}
+
+body .pagination .tableList tr {
+  max-height: 80px;
+  min-height: 64px;
+}
+
+body .pagination .tableList td {
+  max-width: 120px;
+  min-width: 80px;
+  padding: 8px 10px;
+  overflow: hidden;
 }
 
 body .pageButton {
-  border: 1px solid black;
   padding: 5px;
 }
 
 body .clickPageNumber {
-  background-color: lightgrey;
   padding: 5px;
   margin-left: 2px;
   margin-right: 2px;
@@ -53,8 +167,7 @@ body .pagination-block span {
 }
 
 body .pagination-block .pageButton {
-  background-color: grey;
-  color: white;
+  color: #adc1c7;
 }
 
 body .pagination-block span:hover {
