--- a/test3/test3.css
+++ b/test3/test3.css
@@ -9,6 +9,10 @@ body {
   background-color: #eeeeee;
 }
 
+body a {
+  color: #707070;
+}
+
 body .pagination {
   max-width: 800px;
   min-width: 400px;
