--- a/test3/test3.scss
+++ b/test3/test3.scss
@@ -8,6 +8,9 @@ body {
   font-size: 12px;
   color: #707070;
   background-color: #eeeeee;
+  a{
+    color: #707070;
+  }
   .pagination {
     max-width: 800px;
     min-width: 400px;
