added style-change function of sorticons

--- a/test3/test3.scss
+++ b/test3/test3.scss
@@ -144,7 +144,8 @@ body {
       margin-right: 2px;
   }
   .pagination-block {
-    text-align: center;
+    // text-align: center;
+    text-align: left;
     width: 100%;
   }
   .pagination-block span {
